--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box; 
     color: black;
+    font-family: 'Roboto Slab', serif;
 }
 body {  
     background-color: #ffcc99; 
@@ -14,13 +15,19 @@ body {
 .main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-
-    padding: 100px;
+ 
     border-radius: 10px;
     background-color: #ffff;
-    min-height: 400p; 
+    min-width: 400px;
+    min-height: 248px; 
 }
 
+ .value-label {
+    padding-right: 5px;
+ }
 
+ .value-button {
+     
+ }
