Added helpers. Also made the game about eggs instead of just points

--- a/src/style.css
+++ b/src/style.css
@@ -25,9 +25,13 @@ body {
 }
 
  .value-label {
-    padding-right: 5px;
+    padding-left: 5px;
  }
 
  .value-button {
      
+ }
+
+ .hidden {
+     display: none;
  }
