Added hero image with text over. Also various formatting changes.

--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,22 @@
-* {
-    box-sizing: border-box; 
-    color: black;
-    font-family: 'Roboto Slab', serif;
+html {
+    box-sizing: border-box;
 }
-body {  
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+    
+} 
+body {   
+    color: black;
+    font-family: 'Roboto Slab', serif; 
     background-color: #ffcc99; 
-    min-height: 100vh;
+    background-image: url("./img/background.jpg"); 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    margin: 8px 0;
 }
 
 .main {
@@ -19,10 +26,72 @@ body {
     align-items: center;
  
     border-radius: 10px;
-    background-color: #ffff;
-    min-width: 400px;
-    min-height: 248px; 
+    background-color: #ffff; 
 }
+
+.txtover {
+    position: relative;
+    margin: 0;
+} 
+
+.txtover figcaption {
+    position: absolute;
+
+    font-family: impact;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:2px 2px 0 #000,
+    -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    0px 2px 0 #000,
+    2px 0px 0 #000,
+    0px -2px 0 #000,
+    -2px 0px 0 #000,
+    2px 2px 5px #000;
+    
+}
+
+.caption-1 {
+    top: 0;
+    left: 10%;
+}
+
+.caption-2 {
+    top: 44%;
+    left: 15%;
+}
+
+.caption-3 {
+    top: 44%;
+    left: 72%;
+}
+
+.caption-4 {
+    top: 94%;
+    left: 18%;
+}
+
+.caption-5 {
+    top: 94%;
+    left: 72%;
+}
+
+
+.hero {
+    background-color: #6500a2;
+    text-align: center;
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.hero img {
+    max-width: 100%;
+    max-height: 464px;
+}
+
+
 
  .value-label {
     padding-left: 5px;
@@ -30,6 +99,11 @@ body {
 
  .value-button {
      
+ }
+
+ .value-cost {
+     margin: 0;
+     font-size: 0.8rem;
  }
 
  .hidden {
